alteração no texto da section do body

--- a/about.html
+++ b/about.html
@@ -20,7 +20,7 @@
             <h1 class="apresentacao__conteudo__titulo">Sobre mim</h1>
             <p class="apresentacao__conteudo__texto">Desenvolvedora dedicada a melhorar processos para os clientes, programando diversas aplicações para melhor análise e desenvoltura da empresa, sem perda da qualidade.
             <p class="apresentacao__conteudo__texto">Atualmente estou cursando 4º Semestre em Análise e desenvolvimento de Sistemas, juntamente com a Pós-graduação em Product Management, por já está na minha segunda graduação. Antes de entrar na
-                de Tecnologia atuei 5 anos na área de sáude e beleza, ligado diretamente com vendas, onde me proporcionou a ter uma desenvoltura para me comunicar, pensamento criativo, colaboração, atenção para ouvir, gerenciamento do tempo,
+                área de Tecnologia atuei 5 anos na área de saúde e beleza, ligado diretamente com vendas, onde me proporcionou a ter uma desenvoltura para me comunicar, pensamento criativo, colaboração, atenção para ouvir, gerenciamento do tempo,
                 capacidade de planejamento, organização de procedimentos.
                 </p>
         </section>
